@@ -37,6 +37,7 @@ int gridInsertInToGeomEdge(Grid *g, double newX, double newY, double newZ);
 int gridInsertInToGeomFace(Grid *g, double newX, double newY, double newZ);
 int gridInsertInToVolume(Grid *g, double newX, double newY, double newZ);
 
+Grid *gridCollapseEdgeToAnything(Grid *g, Queue *q, int n0, int n1);
 Grid *gridCollapseEdge(Grid *g, Queue *q, int n0, int n1,
 		       double requestedRatio );
 
