@@ -1,3 +1,8 @@
+2005-07-25 14:45 Mike Park  <mike.park@nasa.gov>
+
+	* src/gridinsert.c (gridCollapseEdgeToAnything) made public (non
+	static) to be called from gridmpi adapt.
+
 2005-07-25 10:06 Mike Park  <mike.park@nasa.gov>
 
 	* src/gridfiller.c (gridSavePart) Reset the uv values of the
